# xdid

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  deny.toml  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/xdid/: Cargo.toml  README.md
crates/xdid-core/: Cargo.toml
crates/xdid-core/src/: did.rs  did_url.rs  document.rs  lib.rs  uri.rs
crates/xdid-core/src/did_url/: mod.rs  relative.rs  url.rs
crates/xdid-core/tests/: document.rs
crates/xdid-method-key/: Cargo.toml  README.md
crates/xdid-method-key/src/: lib.rs  parser.rs
crates/xdid-method-key/src/keys/: ed25519.rs  mod.rs  p256.rs  p384.rs  p521.rs
crates/xdid-method-web/: Cargo.toml  README.md
crates/xdid-method-web/src/: lib.rs  parse.rs
crates/xdid/src/: lib.rs  resolver.rs
