[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/unavi-xyz/xdid"
license = "MIT OR Apache-2.0"
keywords = ["did"]

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[workspace.dependencies]
jose-jwk = "0.1.2"
serde_json = "1.0.132"
thiserror = "1.0.69"
