[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
edition    = "2024"
license    = "MIT OR Apache-2.0"
repository = "https://github.com/unavi-xyz/xdid"
version    = "0.5.0"

[workspace.lints.clippy]
nursery     = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
unwrap_used = "deny"

[workspace.metadata.release]
publish        = false
shared-version = true
tag-name       = "v{{version}}"

[workspace.dependencies]
anyhow     = "1.0.100"
jose-jwk   = "0.1.2"
port_check = "0.3.0"
serde      = "1.0.228"
serde_json = "1.0.145"
thiserror  = "2.0.17"

[profile.release]
lto   = true
panic = "abort"
strip = true
