[package]
name = "xdid-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
jose-jwk.workspace = true
serde = { version = "1.0.210", features = ["derive"] }
serde_json.workspace = true
serde_with = "3.11.0"
thiserror.workspace = true
