[package]
name = "xdid-core"
description = "Core types for DID methods to implement."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
jose-jwk.workspace = true
serde = { version = "1.0.210", features = ["derive"] }
serde_with = "3.11.0"
thiserror.workspace = true
