[package]
description          = "Core types for DID methods to implement."
edition.workspace    = true
license.workspace    = true
name                 = "xdid-core"
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
anyhow.workspace    = true
jose-jwk.workspace  = true
serde               = { features = ["derive"], workspace = true }
serde_with          = "3.15.0"
smol_str            = { features = ["serde"], version = "0.3.4" }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
