[package]
name = "xdid-method-key"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[features]
default = ["ed25519", "x25519", "secp256k1", "bls12381", "p384", "p521", "rsa"]
ed25519 = ["dep:ring"]
x25519 = []
secp256k1 = []
bls12381 = []
p256 = ["dep:p256", "dep:ring"]
p384 = []
p521 = []
rsa = []

[dependencies]
jose-jwk.workspace = true
multibase = "0.9.1"
p256 = { version = "0.13.2", optional = true }
ring = { version = "0.17.8", optional = true }
thiserror.workspace = true
unsigned-varint = { version = "0.8.0" }
xdid-core = { path = "../xdid-core" }
