[package]
name = "xdid-method-key"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[features]
default = [
  "ed25519",
  "x25519",
  "secp256k1",
  "bls12381",
  "p256",
  "p384",
  "p521",
  "rsa",
]
ed25519 = ["dep:ring"]
x25519 = []
secp256k1 = []
bls12381 = []
p256 = ["dep:p256", "dep:rand"]
p384 = ["dep:p384", "dep:rand"]
p521 = ["dep:p521", "dep:rand"]
rsa = []

[dependencies]
jose-jwk.workspace = true
multibase = "0.9.1"
p256 = { version = "0.13.2", optional = true }
p384 = { version = "0.13.0", optional = true }
p521 = { version = "0.13.3", optional = true }
rand = { version = "0.8.5", optional = true }
ring = { version = "0.17.8", optional = true }
thiserror.workspace = true
unsigned-varint = { version = "0.8.0" }
xdid-core = { path = "../xdid-core" }
