[package]
name = "xdid-method-key"
description = "xdid implementation of did:key"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[features]
default = ["ed25519", "p256", "p384", "p521"]
ed25519 = []
p256 = ["dep:p256", "dep:rand", "dep:serde_json"]
p384 = ["dep:p384", "dep:rand", "dep:serde_json"]
p521 = ["dep:p521", "dep:rand", "dep:serde_json"]

[dependencies]
jose-jwk.workspace = true
multibase = "0.9.1"
p256 = { version = "0.13.2", features = ["jwk"], optional = true }
p384 = { version = "0.13.0", features = ["jwk"], optional = true }
p521 = { version = "0.13.3", features = ["jwk"], optional = true }
rand = { version = "0.8.5", optional = true }
ring = "0.17.8"
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
unsigned-varint = { version = "0.8.0" }
xdid-core = { path = "../xdid-core", version = "0.1.0" }
