[package]
description          = "xdid implementation of did:web"
edition.workspace    = true
license.workspace    = true
name                 = "xdid-method-web"
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
reqwest = { default-features = false, features = [
  "charset",
  "http2",
  "json",
  "rustls-tls",
  "system-proxy",
], version = "0.12.24" }
xdid-core.path = "../xdid-core"
