[package]
description          = "xdid implementation of did:web"
edition.workspace    = true
license.workspace    = true
name                 = "xdid-method-web"
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
reqwest   = { features = ["json"], version = "0.13.1" }
xdid-core = { path = "../xdid-core", version = "0.6.0" }

[target.'cfg(target_family = "wasm")'.dependencies]
send_wrapper = { version = "0.6.0", features = ["futures"] }
