[package]
name = "xdid"
description = "Simple DID library."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[features]
default = ["did-key", "did-web"]
did-key = ["dep:xdid-method-key"]
did-web = ["dep:xdid-method-web"]

[dependencies]
xdid-core = { path = "../xdid-core", version = "0.1.0" }
xdid-method-key = { path = "../xdid-method-key", version = "0.1.0", optional = true }
xdid-method-web = { path = "../xdid-method-web", version = "0.1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
