[package]
name = "xdid"
description = "Simple DID library."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[features]
default = ["did-key", "did-web"]
did-key = ["dep:xdid-method-key"]
did-web = ["dep:xdid-method-web"]

[dependencies]
thiserror.workspace = true
xdid-core = { path = "../xdid-core", version = "0.2.0" }
xdid-method-key = { path = "../xdid-method-key", version = "0.2.0", optional = true }
xdid-method-web = { path = "../xdid-method-web", version = "0.2.0", optional = true }

[dev-dependencies]
hyper = { version = "1.5.0", features = ["http1", "server"] }
hyper-util = "0.1.10"
port_check = "0.2.1"
serde_json.workspace = true
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
