[package]
description          = "Simple DID library."
edition.workspace    = true
license.workspace    = true
name                 = "xdid"
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[features]
default = ["did-key", "did-web"]
did-key = ["dep:xdid-method-key"]
did-web = ["dep:xdid-method-web"]

[dependencies]
smallvec            = "1.15.1"
thiserror.workspace = true
xdid-core           = { path = "../xdid-core", version = "0.6.0" }
xdid-method-key     = { optional = true, path = "../xdid-method-key", version = "0.6.0" }
xdid-method-web     = { optional = true, path = "../xdid-method-web", version = "0.6.0" }

[dev-dependencies]
hyper                = { features = ["http1", "server"], version = "1.7.0" }
hyper-util           = "0.1.17"
port_check.workspace = true
serde_json.workspace = true
tokio                = { features = ["macros", "rt", "rt-multi-thread"], version = "1.48.0" }
